--- a/6-1-1/index.html
+++ b/6-1-1/index.html
@@ -1913,9 +1913,9 @@
           VULNERABILITY DETECTED
         </div>
         <div class="vuln-msg">
-          <strong>Specialist, you've located the vehicle but haven't given an instruction.</strong><br><br>
-          Knowledge requires action. You've provided the Data (coordinates) and the Information (location), but missed the Knowledge — the actionable instruction the driver receives.<br><br>
-          Add the Impact statement: what does the system <em>tell the driver to do</em>?
+          <strong>Specialist — AXIOM-7 has detected an Impact statement in your answer, but you haven't tagged it yet.</strong><br><br>
+          Scroll up to your answer, select the sentence that states what the driver can <em>do</em> or what the business <em>gains</em>, and tag it [I] using the toolbar on the right.<br><br>
+          No [I] tag = no third mark confirmed.
         </div>
       </div>
 
