--- a/6-1-2/index.html
+++ b/6-1-2/index.html
@@ -564,9 +564,9 @@
       <div class="vulnerability-alert" id="vuln-alert">
         <div class="vuln-header"><div class="vuln-icon">⚠</div>AXIOM-7 // TECHNIQUE GAP DETECTED</div>
         <div class="vuln-msg">
-          Specialist, you've identified the technique and described the system — but you haven't told the examiner <strong>what the business gains from it</strong>.<br><br>
-          The Impact mark is always a business outcome: more revenue, less waste, higher retention, lower cost. Without it, you cannot achieve the 3rd mark.<br><br>
-          <strong>Add your Impact statement.</strong> N + E alone = 2/3.
+          <strong>Specialist — AXIOM-7 has detected an Impact statement in your answer, but you haven't tagged it yet.</strong><br><br>
+          Scroll up to your answer, select the sentence that states the business outcome — revenue, retention, conversion, or cost reduction — and tag it [I] using the toolbar on the right.<br><br>
+          No [I] tag = no third mark confirmed.
         </div>
       </div>
       <!-- SUCCESS -->
