--- a/index.html
+++ b/index.html
@@ -552,6 +552,45 @@
       </div>
     </a>
 
+    <!-- MODULE 6.1.3 -->
+    <a class="module-card" href="./6-1-3/index.html">
+      <div class="module-card-glow"></div>
+      <div class="corner-tl"></div>
+      <div class="corner-br"></div>
+      <div class="module-card-header">
+        <div>
+          <div class="module-code">// MODULE 6.1.3 // DATA ORIGIN PROTOCOL</div>
+          <div class="module-title">How Data Is<br>Generated</div>
+          <div class="module-sub">The Smart Warehouse IoT Scenario</div>
+        </div>
+        <div class="status-badge status-live">LIVE</div>
+      </div>
+      <div class="module-card-body">
+        <div class="module-scenario" style="border-left-color:var(--green)">
+          A logistics company fits IoT sensors to warehouse shelving. Five data generation types — human, AI/ML, sensors, IoT, transactional — one scenario. Master the origin, earn the Impact mark.
+        </div>
+        <div class="module-tags">
+          <div class="tag-chip">6.1.3</div>
+          <div class="tag-chip">IoT</div>
+          <div class="tag-chip">Sensors</div>
+          <div class="tag-chip">Data Sources</div>
+          <div class="tag-chip">Impact Mark</div>
+        </div>
+        <div class="module-nei-row">
+          <div class="nei-mini nm-n"><span class="nei-mini-letter">N</span><div class="nei-mini-label">NAME</div><div class="nei-mini-val">IoT sensors</div></div>
+          <div class="nei-mini nm-e"><span class="nei-mini-letter">E</span><div class="nei-mini-label">EXPLAIN</div><div class="nei-mini-val">Captures &amp; transmits data</div></div>
+          <div class="nei-mini nm-i"><span class="nei-mini-letter">I</span><div class="nei-mini-label">IMPACT</div><div class="nei-mini-val">Prevents waste &amp; loss</div></div>
+        </div>
+      </div>
+      <div class="module-card-footer">
+        <div class="footer-meta">
+          <span>5 SCENES + AXIOM-7 AI ANALYSIS</span>
+          <span style="color:var(--green);">● FULLY UNLOCKED</span>
+        </div>
+        <div class="launch-btn"><span>⟶ LAUNCH MODULE</span></div>
+      </div>
+    </a>
+
     <!-- MODULE 6.1.2 -->
     <a class="module-card gold-card" href="./6-1-2/index.html">
       <div class="module-card-glow"></div>
@@ -684,7 +723,7 @@
       <div class="sr-stat-lbl">BADGES EARNED</div>
     </div>
     <div class="sr-stat">
-      <div class="sr-stat-val" id="sr-modules-val">0 / 2</div>
+      <div class="sr-stat-val" id="sr-modules-val">0 / 3</div>
       <div class="sr-stat-lbl">MODULES COMPLETE</div>
     </div>
   </div>
@@ -833,7 +872,8 @@
   const BADGES = {
     raw_signal:           { name: 'RAW SIGNAL',        icon: '📶', desc: 'Complete Module 6.1.1',                      cat: 'completion',  green: false },
     market_intelligence:  { name: 'MARKET INTEL',       icon: '📊', desc: 'Complete Module 6.1.2',                      cat: 'completion',  green: false },
-    full_clearance:       { name: 'FULL CLEARANCE',     icon: '🔓', desc: 'Complete both available modules',            cat: 'completion',  green: true  },
+    signal_mapper:        { name: 'SIGNAL MAPPER',      icon: '📡', desc: 'Complete Module 6.1.3',                      cat: 'completion',  green: false },
+    full_clearance:       { name: 'FULL CLEARANCE',     icon: '🔓', desc: 'Complete all available modules',             cat: 'completion',  green: true  },
     first_strike:         { name: 'FIRST STRIKE',       icon: '⚡',  desc: '60+ word answer on first attempt',           cat: 'performance', green: true  },
     impact_specialist:    { name: 'IMPACT SPECIALIST',  icon: '🎯', desc: 'Trigger all three HUD panels in one answer',  cat: 'performance', green: false },
     precision_writer:     { name: 'PRECISION WRITER',   icon: '🔬', desc: '60–70 words with all three HUD panels lit',   cat: 'performance', green: false },
@@ -845,10 +885,10 @@
   const RANKS = [
     { id:0, label:'00', title:'TRAINEE',           requires:[] },
     { id:1, label:'01', title:'DATA CADET',         requires:['raw_signal'] },
-    { id:2, label:'02', title:'SIGNAL ANALYST',     requires:['raw_signal','market_intelligence'] },
-    { id:3, label:'03', title:'SYSTEMS OPERATOR',   requires:['raw_signal','market_intelligence','full_clearance'] },
-    { id:4, label:'04', title:'DATA STRATEGIST',    requires:['raw_signal','market_intelligence','full_clearance','impact_specialist'] },
-    { id:5, label:'05', title:'INSIGHT ARCHITECT',  requires:['raw_signal','market_intelligence','full_clearance','impact_specialist','method_mastery'] },
+    { id:2, label:'02', title:'SIGNAL ANALYST',     requires:['raw_signal','market_intelligence','signal_mapper'] },
+    { id:3, label:'03', title:'SYSTEMS OPERATOR',   requires:['raw_signal','market_intelligence','signal_mapper','full_clearance'] },
+    { id:4, label:'04', title:'DATA STRATEGIST',    requires:['raw_signal','market_intelligence','signal_mapper','full_clearance','impact_specialist'] },
+    { id:5, label:'05', title:'INSIGHT ARCHITECT',  requires:['raw_signal','market_intelligence','signal_mapper','full_clearance','impact_specialist','method_mastery'] },
   ];
 
   /* ════════════════════════════════════════════════════
@@ -979,10 +1019,10 @@
   function updateStats(earnedMap, rank) {
     const earned = Object.keys(earnedMap).length;
     const total  = Object.keys(BADGES).length;
-    const mods   = (earnedMap['raw_signal'] ? 1 : 0) + (earnedMap['market_intelligence'] ? 1 : 0);
+    const mods   = (earnedMap['raw_signal'] ? 1 : 0) + (earnedMap['market_intelligence'] ? 1 : 0) + (earnedMap['signal_mapper'] ? 1 : 0);
     document.getElementById('sr-rank-val').textContent    = rank.title;
     document.getElementById('sr-badge-count').textContent = `${earned} / ${total}`;
-    document.getElementById('sr-modules-val').textContent = `${mods} / 2`;
+    document.getElementById('sr-modules-val').textContent = `${mods} / 3`;
   }
 
   function renderAll(newBadges) {
